overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,6 @@ body {
   color: white;
   margin: auto;
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 #root{
   height: 100%;
